--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.10"
+    "mongoose": "^5.6.10",
+    "multer": "^1.4.2"
   },
   "scripts": {
     "start": "node index.js",
